syntax = "proto3";
package book;

option go_package = ".;proto";

service BookService {
  rpc CreateBook(CreateBookRequest) returns (Book) {}
  rpc FetchBook(FetchBookRequest) returns (FetchBookResponse) {}
  rpc FindByID(FindBookByIDRequest) returns (Book) {}
  rpc FindByTitle(FindBookByTitleRequest) returns (Book) {}
  rpc UpdateBook(UpdateBookRequest) returns (Book) {}
  rpc UpdateBookStock(UpdateBookStockRequest) returns (Book) {}
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse) {}
}

message CreateBookRequest {
  string title = 1;
}

message Book {
  string id = 1;
  string title = 2;
  int32 stock = 3;
}

message FetchBookRequest {
  BookPaginationRequest pagination = 1;
  string title = 2;
}

message FetchBookResponse {
  BookPaginationResponse pagination = 1;
  repeated Book books = 2;
}

message BookPaginationRequest {
  int32 limit = 1;
  int32 page = 2;
}

message BookPaginationResponse {
  int32 limit = 1;
  int32 page = 2;
  int32 last_page = 3;
  int32 total = 4;
}

message FindBookByIDRequest {
  string id = 1;
}

message FindBookByTitleRequest {
  string title = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
}

message UpdateBookStockRequest {
  string id = 1;
  int32 stock_change = 2;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
}
